--- a/docz/examples/example-options.mdx
+++ b/docz/examples/example-options.mdx
@@ -14,7 +14,7 @@ import MaterialTable from '../../src/material-table'
     columns={[
       {title: 'Name', field: 'name'},
       {title: 'Surname', field: 'surname'},
-      {title: 'Birth Year', field: 'birthYear', type: 'numeric'},
+      {title: 'Birth Year', field: 'birthYear', type: 'number'},
       {title: 'Birth Place', field: 'birthCity', lookup: {34: 'İstanbul', 63: 'Şanlıurfa'}},      
     ]}
     data={[
