--- a/docz/props.mdx
+++ b/docz/props.mdx
@@ -64,6 +64,7 @@ import MaterialTable from '../src/material-table'
 | readonly                | boolean         | false     | Flag to make column readonly when editing, the column will still be editable when adding a row                |
 | removable               | boolean         | true      | Flag for column that could be removed with columnsButton or not                                               |
 | render                  | func            |           | Render a custom node for cell. Parameter is `rowData` and return value must be ReactElement                   |
+| renderEditCell          | func            |           | Render a custom node for cell. Parameter is `{columnDef, value, onChange}` and return value must be ReactElement|
 | searchable              | boolean         | undefined | If true, includes the column when performing a search                                                         |
 | sorting                 | boolean         | true      | Flag to activate or disable sorting feature of column                                                         |
 | title                   | string          |           | Header text                                                                                                   |
@@ -213,4 +214,3 @@ Options property could be given to component as `options` property. You can chan
 | toolbar                    | boolean                | true          | Flag for toolbar                                                                  |
 | showTitle                  | boolean                | true          | Flag for title                                                                    |
 | toolbarButtonAlignment     | string                 | 'right'       | Alignment for buttons in toolbar                                                  |
-
